@@ -260,6 +260,7 @@
             <button class="button button-small text-replace button--icon" type="button">{% icon name="cog" %}button element</button>
 
             <h3>Negative</h3>
+            <p>Should not be used with <code>.button-secondary</code> on the same element.</p>
 
             <a href="#" class="button no">No link</a>
             <button class="button no" type="button">No button</button>
